--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -1,3 +1,20 @@
 .site_con{
   background-color:#5d89df ;
+  width: 100%;
+  height: 100%;
+  margin-left: 251px;
+  margin-top: 75px;
+
+  .conatainer{
+    background-color: green;
+    width: calc(100% - 48px);
+    height: calc(100% - 48px);
+
+    .cards_group1{
+      width: 279.938px;
+      height: 158.500px;
+      background-color: #d343bb;
+      margin-left: 24px;
+    }
+  }
 }
