--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -1,20 +1,51 @@
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+@import "bootstrap/scss/mixins";
+@import "bootstrap/scss/buttons";
+@import "bootstrap/scss/transitions";
+@import "bootstrap/scss/transitions";
 .site_con{
   background-color:#5d89df ;
   width: 100%;
   height: 100%;
-  margin-left: 251px;
-  margin-top: 75px;
-
+  padding-left: 251px;
+  padding-top: 75px;
+  display: flex;
+  
   .conatainer{
     background-color: green;
-    width: calc(100% - 48px);
-    height: calc(100% - 48px);
+    width: 1191.750px;
+    //height: calc(100% - 48px);
+    margin-left: 24px;
 
-    .cards_group1{
-      width: 279.938px;
+    .card_group1{
+      width: 100%;
       height: 158.500px;
       background-color: #d343bb;
-      margin-left: 24px;
+      margin-top: 24px;
+      display: flex;
+
+
+      .card1{
+      width: 279px;
+      height: 158px;
+      background-color: #ffffff;
+      border-radius: 15px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-left: 10px;
+
+      
+        .card_all_item{
+          width: calc(100% - 40px);
+          height: calc(100% - 40px);
+
+          background-color: #d343bb;
+        }
+      }
+
+     
     }
   }
 }
