--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -4,6 +4,12 @@
 @import "bootstrap/scss/buttons";
 @import "bootstrap/scss/transitions";
 @import "bootstrap/scss/transitions";
+
+
+@import '@fontsource/urbanist/400.css'; // Regular
+@import '@fontsource/urbanist/500.css'; // Medium
+@import '@fontsource/urbanist/600.css'; // SemiBold
+@import '@fontsource/urbanist/700.css'; // Bold
 .site_con{
   background-color:#5d89df ;
   width: 100%;
@@ -24,26 +30,48 @@
       background-color: #d343bb;
       margin-top: 24px;
       display: flex;
+      gap: 20px;
 
-
-      .card1{
-      width: 279px;
-      height: 158px;
-      background-color: #ffffff;
-      border-radius: 15px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin-left: 10px;
-
+      .card{
+        border-radius: 12px;
+        
       
-        .card_all_item{
-          width: calc(100% - 40px);
-          height: calc(100% - 40px);
 
-          background-color: #d343bb;
+      .card-title{
+        font-size: 22px;
+        color: #0f141f;
+        font-weight: 700;
+        font-family: 'Urbanist', sans-serif;
+        margin-bottom: 0px;
+
+      }
+      .card-text{
+        color: #0c1018;
+        font-size: 15px;
+        font-weight: 400;
+        font-family: 'Roboto', sans-serif;
+        margin-top: 5px;
+      }
+      .icon_card_graphic{
+        background-color: #fd3a6b;
+        width: auto;
+        height: auto;
+        display: flex;
+        gap: 120px;
+
+        .icon_img{
+          width: 48px;
+          height: 48px;
+         justify-content: center;
+         border-radius: 100px;
+         display: flex;
+          align-items: center;
+          
         }
       }
+
+    }
+      
 
      
     }
