--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -129,7 +129,9 @@
                 width: 81px;
                 height: 31px;
                 margin-top: 7px;
+                border: 1px solid #667797
 
+                
                 p{
                   font-size: 13px;
                   font-weight: 400;
