--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -18,79 +18,106 @@
   padding-top: 75px;
   display: flex;
   
-  .conatainer{
-    background-color: green;
-    width: 1191.750px;
-    //height: calc(100% - 48px);
-    margin-left: 24px;
 
-    .card_group1{
-      width: 100%;
-      height: 158.500px;
-      margin-top: 24px;
-      display: flex;
-      gap: 20px;
-
-      .card{
-        border-radius: 12px;
+   .scrollable-container {
+        height: 100%;
+        overflow-y: auto;
+        overflow-x: hidden;
         
+        &::-webkit-scrollbar {
+          width: 6px;
+        }
+        
+        &::-webkit-scrollbar-track {
+          background: #f1f1f1;
+          border-radius: 10px;
+        }
+        
+        &::-webkit-scrollbar-thumb {
+          background: #c1c1c1;
+          border-radius: 10px;
+        }
+        
+        &::-webkit-scrollbar-thumb:hover {
+          background: #a8a8a8;
+        }
+
+  .o{
+    display: flex;
+    .conatainer{
+      background-color: green;
+      width: 1191.750px;
+      //height: calc(100% - 48px);
+      margin-left: 24px;
+      flex-direction: row;
       
-
-      .card-title{
-        font-size: 22px;
-        color: #0f141f;
-        font-weight: 700;
-        font-family: 'Urbanist', sans-serif;
-        margin-bottom: 0px;
-
-      }
-      .card-text{
-        color: #0c1018;
-        font-size: 15px;
-        font-weight: 400;
-        font-family: 'Roboto', sans-serif;
-        margin-top: 5px;
-      }
-      .icon_card_graphic{
-        width: auto;
+      .card_group1{
+        width: 100%;
+        height: 158.500px;
+        margin-top: 24px;
+        display: flex;
+        gap: 20px;
+        
+        .card{
+          border-radius: 12px;
+          
+          
+          
+          .card-title{
+            font-size: 22px;
+            color: #0f141f;
+            font-weight: 700;
+            font-family: 'Urbanist', sans-serif;
+            margin-bottom: 0px;
+            
+          }
+          .card-text{
+            color: #0c1018;
+            font-size: 15px;
+            font-weight: 400;
+            font-family: 'Roboto', sans-serif;
+            margin-top: 5px;
+          }
+          .icon_card_graphic{
+            width: auto;
         height: auto;
         display: flex;
         gap: 120px;
-
+        
         .icon_img{
           width: 48px;
           height: 48px;
-         justify-content: center;
-         border-radius: 100px;
-         display: flex;
+          justify-content: center;
+          border-radius: 100px;
+          display: flex;
           align-items: center;
           
         }
       }
-
-    }
       
     }
-    .card_group2{
-      width: 1191px;
-      height: 406px;
-      background-color: rgb(255, 255, 255);
-      margin-top: 24px;
-      border-radius: 12px;
-
-      .card-body{
-        .h1_text_buttons{
-          background-color: coral;
+    
+  }
+  .card_group2{
+    width: 1191px;
+    height: 406px;
+    background-color: rgb(255, 255, 255);
+    margin-top: 24px;
+    border-radius: 12px;
+    
+    .card-body{
+      .h1_text_buttons{
+        background-color: coral;
+        
+        
+        h1{
+          color: #0f141f;
+          font-size: 22px;
+          font-weight: 700;
+          font-family: 'Urbanist', sans-serif;
+          margin-top: 5px;
           
-          
-          h1{
-            color: #0f141f;
-            font-size: 22px;
-            font-weight: 700;
-            font-family: 'Urbanist', sans-serif;
-            margin-top: 5px;
-             
-          }
+        }
             .circle_text{
               display: flex;
               gap:5px;
@@ -101,7 +128,7 @@
               font-size: 13px;
               font-family: 400;
               margin-top: 10px;
-  
+              
               .circle{
                 width: 8px;
                 height: 8px;
@@ -120,17 +147,17 @@
               border-radius: 8px;
               margin-right: 5px;
             }
-
+            
             .dropdown{
               width: 81px;
               height: 31px;
-
+              
               button{
                 width: 81px;
                 height: 31px;
                 margin-top: 7px;
                 border: 1px solid #667797
-
+                
                 
                 p{
                   font-size: 13px;
@@ -141,17 +168,40 @@
               }
             }
           }
-
+          
         }
       }
+    }
     
+    .r{
+      height: 365.500px;
+      width: 381.250px;
+      background-color: #ffffff;
+      border-radius: 12px;
+      border: none;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .card-body{
+        width: 100%;
+        height: 100%;
+        background-color: darkkhaki;
+        display: flex;
+        
+          .calendar_header{
+            width: 100%;
+            height: 38px;
+            background-color: #ecf2fe;
+            border-radius: 20px;
+          }
+        
+      }
 
 
-
-
-
-
-
-
+      
+    }
+    
   }
-}
+  
+}}
