--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -188,13 +188,83 @@
         height: 100%;
         background-color: darkkhaki;
         display: flex;
-        
+        flex-direction: column;
+
           .calendar_header{
             width: 100%;
             height: 38px;
             background-color: #ecf2fe;
             border-radius: 20px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .a{
+              width: calc(100% - 12px);
+              height: calc(100% - 12px);
+
+              .circle_svg {
+                background-color: #ffffff;
+                width: 26px;
+                height: 26px;
+                cursor: pointer;
+                border: 1px solid #e1ebfe;
+
+                &:hover {
+                  background-color: #3e80f9;
+                  border: none;
+                  
+                  svg {
+                    fill: #ffffff;
+                  }
+                }
+                
+                svg {
+                  fill: #3e80f9;
+                }
+              }
+              p{
+                color: #0f141f;
+                font-family: 'Urbanist', sans-serif;
+                font-size: 15px;
+                font-weight: 700;
+                margin-top: 25px;
+              }
+            }
+            
           }
+          .calendar_week{
+            width: 100%;
+            height: 37px;
+            border-radius: 8px;
+            background-color: #ffffff;
+            margin-top: 20px;
+            display: flex;
+            justify-content: center;
+             border: 1px solid #ecf2fe;
+
+            .week{
+              width: calc(100% - 40px);
+              height: 37px;
+              display: flex;
+              gap: 30px;
+              justify-content: center;
+              align-items: center;
+
+              p{
+                 color: #06080c;
+                font-family: 'Urbanist', sans-serif;
+                font-size: 13px;
+                font-weight: 700;
+                margin-top: 17px;
+              }
+            }
+          }
+
+          .days{
+            
+          }
+
         
       }
 
