--- a/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/pages/main/Main.scss
@@ -186,9 +186,9 @@
       .card-body{
         width: 100%;
         height: 100%;
-        background-color: darkkhaki;
         display: flex;
         flex-direction: column;
+        padding: 16px;
 
           .calendar_header{
             width: 100%;
@@ -209,6 +209,7 @@
                 height: 26px;
                 cursor: pointer;
                 border: 1px solid #e1ebfe;
+                transition: all 0.2s ease; 
 
                 &:hover {
                   background-color: #3e80f9;
@@ -241,7 +242,8 @@
             margin-top: 20px;
             display: flex;
             justify-content: center;
-             border: 1px solid #ecf2fe;
+             border: 1px solid #d5dbe7;
+             margin-bottom: 20px;
 
             .week{
               width: calc(100% - 40px);
@@ -262,7 +264,39 @@
           }
 
           .days{
+            width: 100%;
+            height: auto;
+            background-color: #3e80f9;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: end;
+            gap:0px;
+
+            /*.j{
+              background-color: #a8a8a8;
+              width: calc(100% - 40px);
+              height: auto;
+              margin-left: 20px;*/
+              
+              
+
+              div{
+                width: 42px;
+                height: 42px;
+                background-color: #667797;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                font-size: 14px;
+                font-family: 'Roboto', sans-serif;
+                margin-left: 5px;
+                
+                
+
+                
+              }
             
+
           }
 
         
