--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -404,7 +404,7 @@ header {
 
 .normal_button {
   background-color: #ffffff;
-  color: #667797;
+  fill: #667797;
 
   .button_svg1 {
     fill: #667797;
