--- a/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
+++ b/Dashboard/React_project/React_pr/sandbox-main/src/components/header/Header.scss
@@ -406,7 +406,7 @@ header {
     .user{
       width: 182px;
       height: 42px;
-      background-color: #5c6066;
+      background-color: #4e76b3;
 
       .shaking-animation {
   &:hover {
